--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: 2023 International Seminar on Quantum, Superconducting and Cryogenic Computer Architecture
 description: Dec 11 ~ 12, 2023, Seoul, South Korea
+show_downloads: false
 theme: jekyll-theme-cayman
