--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,5 @@ title: 2023 International Workshop on Quantum, Superconducting and Cryogenic Com
 description: Dec 11 - 12, 2023, Seoul, South Korea
 show_downloads: false
 theme: jekyll-theme-cayman
+github:
+  is_project_page: false
